💄 fixed layout issues

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -2,16 +2,6 @@
   box-sizing: border-box;
 }
 
-*,
-*::before,
-*::after {
-  transition:
-    background-color 0.2s ease-in-out,
-    color 0.2s ease-in-out,
-    border-color 0.2s ease-in-out,
-    box-shadow 0.2s ease-in-out;
-}
-
 *:focus {
   outline: none;
 }
